Fixed spacing

--- a/pages/edificio-b/edificio/styles.css
+++ b/pages/edificio-b/edificio/styles.css
@@ -103,10 +103,7 @@ button {
     width: 20vh;
     font-size: 2vh;
     font-weight: 600;
-}
-
-.modificar-form {
-    margin-top: -3vh;
+    margin-top: -8vh;
 }
 
 .modify-input {
